Update test classes and do some code improvement